fix gaps on html, add bottom border to table rows

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 tr {
-  border: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
 td {
